syntax = "proto3";

option go_package = ".;account";

package account;

service Account {
    rpc CreateAccount(AccountReq) returns (AccountResp){}
    rpc CheckAccountExistByMobile(AccountReq) returns (AccountResp){}
    rpc GetIdByMobile(AccountReq) returns (AccountResp){}
    rpc GetPasswordByMobile(AccountReq) returns (AccountResp){}
    rpc GetPasswordById(AccountReq) returns (AccountResp){}
    rpc GetUserIdByID(AccountReq) returns (AccountResp){}
    rpc GetAccountByUID(AccountReq) returns (AccountResp){}
    rpc GetAccountByMobile(AccountReq) returns (AccountResp){}   
    rpc UpdateAccountById(AccountReq) returns (AccountResp){}
    rpc UpdatePasswdById(AccountReq) returns (AccountResp){}
}

message AccountReq{
    string ID = 1;
    string UserID =2;
    string Mobile = 3;
    string Email = 4;
    string Salt = 5;
    string Password = 6;
    string Remark = 7;
    string CreateTime = 8;
    string UpdateTime = 9;
}

message AccountResp{
    int32 Code = 1;
    string Message = 2;
    string Data =3;
}
